--- a/src/package.xml
+++ b/src/package.xml
@@ -158,6 +158,7 @@
         <members>MBMS_Movie_Photo__c.MBMS_Status__c</members>
         <members>MBMS_Movie__c.MBMS_Description__c</members>
         <members>MBMS_Movie__c.MBMS_Director__c</members>
+        <members>MBMS_Movie__c.MBMS_Main_Filming_Location__c</members>
         <members>MBMS_Movie__c.MBMS_Previous_Status__c</members>
         <members>MBMS_Movie__c.MBMS_Producer__c</members>
         <members>MBMS_Movie__c.MBMS_Status_Comment__c</members>
